# azalea-plugins

./: Cargo.toml  README.md
azalea-bridge/: Cargo.toml
azalea-bridge/src/: lib.rs
azalea-discord/: Cargo.toml  README.md
azalea-discord/src/: discord.rs  lib.rs
azalea-health/: Cargo.toml  README.md
azalea-health/src/: lib.rs
azalea-matrix/: Cargo.toml  README.md  example-appservice-registration.yaml
azalea-matrix/src/: lib.rs  matrix.rs
