[package]
name = "azalea-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
azalea-auth = {git = "https://github.com/mat-1/azalea.git"}
azalea-client = {git = "https://github.com/mat-1/azalea.git"}
azalea-crypto = {git = "https://github.com/mat-1/azalea.git"}
azalea-protocol = {git = "https://github.com/mat-1/azalea.git"}
azalea-world = {git = "https://github.com/mat-1/azalea.git"}
bevy = "0.10.0"
bevy_ecs = "0.10.0"
flume = "0.10.14"
log = "0.4.17"
uuid = "1.3.0"

[features]
bridge = []