[package]
name = "azalea-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
azalea-bridge = { path = "../azalea-bridge" }
flume = "0.10.14"
log = "0.4.17"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
matrix-sdk-appservice = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
tokio = "1.25.0"

[features]
bridge = ["azalea-bridge/bridge"]